# wayland-playground

./: .gitignore  .gitmodules  CMakeLists.txt
protocols/: CMakeLists.txt
src/: main.cpp
